# Gmail-

./: .env.example  .gitignore  Package.swift  README.md  pyproject.toml
.github/workflows/: ios-build.yml  macos-build.yml
GmailReaderIOS/: GmailReaderIOSApp.swift
GmailReaderIOS.xcodeproj/: project.pbxproj
GmailReaderIOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GmailReaderIOS/Models/: MailModels.swift
GmailReaderIOS/Resources/: PrivacyInfo.xcprivacy
GmailReaderIOS/Services/: AccountStore.swift  KeychainStore.swift  MailCoreService.swift
GmailReaderIOS/ViewModels/: MailboxViewModel.swift
GmailReaderIOS/Views/: AccountManagerView.swift  ComposeView.swift  HTMLWebView.swift  MessageDetailView.swift  MessageListView.swift  RootView.swift  SidebarView.swift
Resources/: GmailReader.icns  Info.plist
Sources/CurlShim/: CurlShim.c
Sources/GmailReaderApp/: AccountStore.swift  AppPreferences.swift  CurlTransport.swift  GmailReaderApp.swift  GmailService.swift  GmailWebLink.swift  GoogleTranslationService.swift  HTMLTranslationDocument.swift  HTMLWebView.swift  KeychainStore.swift  MIMEParser.swift  MailTranslationService.swift  MailboxSnapshotStore.swift  MailboxViewModel.swift  Models.swift  RootView.swift
Tests/GmailReaderAppTests/: CurlTransportTests.swift  GmailWebLinkTests.swift  HTMLTranslationDocumentTests.swift  MIMEParserTests.swift
scripts/: build_app.sh
src/gmail_reader/: __init__.py  accounts.py  cli.py  client.py  config.py  (+4 more)
tests/: test_accounts.py  test_client.py  test_config.py  test_message.py  test_pool.py  test_web.py
(+7 files in other folders)
