[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-app-password-reader"
version = "0.1.0"
description = "通过 Gmail 应用专用密码读取并实时监听邮件"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.1,<4",
  "imapclient>=3.0,<4",
  "pysocks>=1.7,<2",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3,<10", "ruff>=0.9"]

[project.scripts]
gmail-reader = "gmail_reader.cli:main"
gmail-web = "gmail_reader.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gmail_reader = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
